--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <nav class="navbar">
         <figure class="logo">
-
+            <img src="images\logos\cover.png" alt="logo-img">
         </figure>
         <ul class="nav-options">
             <li class="nav-option">tardis</li>
@@ -20,7 +20,7 @@
     </nav>
     <section class="banner">
         <figure class="ban-logo">
-
+            <img src="images\logos\default.png" alt="TORCHWOOD">
         </figure>
     </section>
     <section class="aboutus">
@@ -29,16 +29,22 @@
         <p class="au-subtitle">the team</p>
         <section class="team">
             <article class="card-member">
-                <div class="cm-image"></div>
-                <p class="cm-name"></p>
+                <figure class="cm-image">
+                    <img src="images\tony.jpg" alt="Antonio Barrera">
+                </figure>
+                <p class="cm-name">Antonio Barrera</p>
             </article>
             <article class="card-member">
-                <div class="cm-image"></div>
-                <p class="cm-name"></p>
+                <figure class="cm-image">
+                    <img src="images\Eli.jpg" alt="Eliezer Couoh">
+                </figure>                
+                <p class="cm-name">Eliezer Couoh</p>
             </article>
             <article class="card-member">
-                <div class="cm-image"></div>
-                <p class="cm-name"></p>
+                <figure class="cm-image">
+                    <img src="images\rosi.jpg" alt="Rosaura Garcilazo">
+                </figure>
+                <p class="cm-name">Rosaura Garcilazo</p>
             </article>
         </section>
     </section>
@@ -55,19 +61,27 @@
     </section>
     <section class="news">
         <article class="new">
-            <figure class="new-img"></figure>
+            <figure class="new-img">
+                <img src="images\teamtardis.jpg" alt="new-img">
+            </figure>
             <p class="new-content">TEAM TARDIS. David Tennant en entrevista junto a los personajes más icónicos del doctor no. 10! </p>
         </article>
         <article class="new">
-            <figure class="new-img"></figure>
+            <figure class="new-img">
+                <img src="images\dotd.jpg" alt="new-img">
+            </figure>
             <p class="new-content">The day of the doctor es tendencia después de cumplir 7 años este mes. Únete a la celebración con #TDOTD</p>
         </article>
         <article class="new">
-            <figure class="new-img"></figure>
+            <figure class="new-img">
+                <img src="images\river.jpg" alt="new-img">
+            </figure>
             <p class="new-content">“In terms of television, I think i’ve only kissed him twice” ¿Alex Kingston nos da a entender que ha besado a Matt Smith fuera de cámara?</p>
         </article>
         <article class="new">
-            <figure class="new-img"></figure>
+            <figure class="new-img">
+                <img src="images\jo.jpg" alt="new-img">
+            </figure>
             <p class="new-content">Jo Martin tras balbalinas en el set de Doctor Who, no creerás lo que tiene que contar al respecto...</p>
         </article>
     </section>
@@ -86,7 +100,9 @@
         <p class="time-left">Quedan 36 hrs 24 min 18 s</p>
     </section>
     <section class="store">
-        <figure class="store"></figure>
+        <figure class="store">
+            <img src="images\toys.jpg" alt="store-img">
+        </figure>
         <div class="store-card">
             <p class="store-desc">Miles de artículos temáticos de Doctor Who te esperan en nuestra tienda en línea, entra para ver las promociones</p>
             <a href="" class="gotoservices">ver más >></a>
