--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Front-End design</title>
 </head>
 <body>
@@ -11,11 +12,11 @@
             <img src="images\logos\cover.png" alt="logo-img">
         </figure>
         <ul class="nav-options">
-            <li class="nav-option">tardis</li>
-            <li class="nav-option">servicios</li>
-            <li class="nav-option">about us</li>
-            <li class="nav-option">contacto</li>
-            <li class="nav-option">subscribe</li>
+            <li class="nav-option"><a href="#">tardis</a></li>
+            <li class="nav-option"><a href="#">servicios</a></li>
+            <li class="nav-option"><a href="#">about us</a></li>
+            <li class="nav-option"><a href="#">contacto</a></li>
+            <li class="nav-option"><a href="#">subscribe</a></li>
         </ul>
     </nav>
     <section class="banner">
