--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
         </section>
     </section>
     <section class="quizz">
-        <p class="title">descubre qué doctor eres con este quizz</p>
-        <button class="gotoservice">contestar quizz</button>
-        <a href="" class="gotoservices">ver todos los quizzes</a>
+        <p class="quizz-title">descubre qué doctor eres con este quizz</p>
+        <div class="quizz-opts">
+            <a href="" class="gotoservice">contestar quizz</a>
+            <a href="" class="gotoservices">ver todos los quizzes</a>
+        </div>
+        
     </section>
     <section class="articles">
         <p class="art-title">todo acerca de jodie whittaker</p>
