--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
         
     </section>
     <section class="articles">
-        <p class="art-title">todo acerca de jodie whittaker</p>
-        <p class="article-desc">El camino a ser #13 y descubrir su doctor interior</p>
-        <button class="gotoservice">leer artículo</button>
-        <a href="" class="gotoservices">ver todos los artículos</a>
+        <div class="art-info">
+            <p class="art-title">todo acerca de jodie whittaker</p>
+            <p class="article-desc">El camino a ser #13 y descubrir su doctor interior</p>
+            <a href="" class="gotoservice">leer artículo</a>
+            <a href="" class="gotoservices">ver todos los artículos</a>
+        </div>
     </section>
     <section class="news">
         <article class="new">
