--- a/index.html
+++ b/index.html
@@ -92,16 +92,27 @@
         </article>
     </section>
     <section class="election">
-        <p class="sel-title">vota por tu favorito</p>
-        <p class="sel-desc">Haremos un especial de “Sabías que?” del ganador</p>
+        <p class="el-title">vota por tu favorito</p>
+        <p class="el-desc">Haremos un especial de “Sabías que?” del ganador</p>
         <section class="contestans">
-            <article class="cont-name">daleks</article>
-            <div class="cont-bar"></div>
-            <p class="cont-percent">64%</p>
+            <div class="contestan">
+                <article class="cont-name">daleks</article>
+                <div class="percentage">
+                    <div class="cont-bar opt1"></div>
+                    <p class="cont-percent">64%</p>
+                </div>
+                
+            </div>
 
-            <article class="cont-name">cybermen</article>
-            <div class="cont-bar"></div>
-            <p class="cont-percent">36%</p>
+            <div class="contestan">
+                <article class="cont-name">cybermen</article>
+                <div class="percentage">
+                    <div class="cont-bar opt2"></div>
+                    <p class="cont-percent">36%</p>
+                </div>
+
+            </div>
+            
         </section>
         <p class="time-left">Quedan 36 hrs 24 min 18 s</p>
     </section>
