--- a/index.html
+++ b/index.html
@@ -117,14 +117,18 @@
         <p class="time-left">Quedan 36 hrs 24 min 18 s</p>
     </section>
     <section class="store">
-        <figure class="store">
+        <p class="store-title">tienda en línea</p>
+        <article class="store-content">
+            <figure class="store-img">
             <img src="images\toys.jpg" alt="store-img">
-        </figure>
-        <div class="store-card">
-            <p class="store-desc">Miles de artículos temáticos de Doctor Who te esperan en nuestra tienda en línea, entra para ver las promociones</p>
-            <a href="" class="gotoservices">ver más >></a>
-        </div>
+            </figure>
+            <div class="store-card">
+                Miles de artículos temáticos de Doctor Who te esperan en nuestra tienda en línea, entra para ver las promociones
+                <a href="" class="gotoservices">ver más >></a>
+            </div>
+        </article>
     </section>
+    <br>
     <footer class="footer">
         <p class="footer-desc">© 2020 TORCHWOOD CORP.</p>
     </footer>
