--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-options">
             <li class="nav-option"><a href="#">tardis</a></li>
             <li class="nav-option"><a href="#">servicios</a></li>
-            <li class="nav-option"><a href="#">about us</a></li>
+            <li class="nav-option"><a href="#aboutus">about us</a></li>
             <li class="nav-option"><a href="#">contacto</a></li>
             <li class="nav-option"><a href="#">subscribe</a></li>
         </ul>
@@ -24,7 +24,7 @@
             <img src="images\logos\default.png" alt="TORCHWOOD">
         </figure>
     </section>
-    <section class="aboutus">
+    <section class="aboutus" id="aboutus">
         <p class="au-title">about us</p>
         <p class="au-content">Aventuras a través del tiempo y el espacio de la mano del personaje más entrañable de la última media década. Te encuentras en el sitio oficial de fanáticos de Doctor Who. Aquí encontrarás todas las novedades que envuelven el misterioso universo de The Doctor (y los universos paralelos también). Suscríbete para ser parte de la comunidad más grande desde Gallifrey hasta Raxacoricofallapatorius.</p>
         <p class="au-subtitle">the team</p>
@@ -96,7 +96,7 @@
         <p class="el-desc">Haremos un especial de “Sabías que?” del ganador</p>
         <section class="contestans">
             <div class="contestan">
-                <article class="cont-name">daleks</article>
+                <article class="cont-name" title="VOTA AHORA"><a href="">daleks</a></article>
                 <div class="percentage">
                     <div class="cont-bar opt1"></div>
                     <p class="cont-percent">64%</p>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="contestan">
-                <article class="cont-name">cybermen</article>
+                <article class="cont-name" title="VOTA AHORA"><a href="">cybermen</a></article>
                 <div class="percentage">
                     <div class="cont-bar opt2"></div>
                     <p class="cont-percent">36%</p>
