--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
             <li class="nav-option"><a href="#">contacto</a></li>
             <li class="nav-option"><a href="#">subscribe</a></li>
         </ul>
+        <figure class="burger">
+            <a href=""><img src="images\burger.png" alt="burger-menu"></a>
+        </figure>
     </nav>
     <section class="banner">
         <figure class="ban-logo">
-            <img src="images\logos\default.png" alt="TORCHWOOD">
+            <img  alt="TORCHWOOD">
         </figure>
     </section>
     <section class="aboutus" id="aboutus">
