--- a/servicios.html
+++ b/servicios.html
@@ -14,11 +14,11 @@
                 <img src="images\logos\cover.png" alt="logo-img">    
             </figure>
             <ul class="nav-options">
-                <li class="nav-option">Tardis</li>
-                <li class="nav-option">Servicios</li>
-                <li class="nav-option">Nosotros</li>
-                <li class="nav-option">Contacto</li>
-                <li class="nav-option">Subscribe</li>
+                <li class="nav-option">TARDIS</li>
+                <li class="nav-option">SERVICIOS</li>
+                <li class="nav-option">NOSOTROS</li>
+                <li class="nav-option">CONTACTO</li>
+                <li class="nav-option">SUBSCRIBE</li>
             </ul>
         </nav>
         <section class="hero-banner">
@@ -102,7 +102,27 @@
                 </figure>
                 <div class="art-card-content">
                     <h1>Todo acerca de Jodie Whittaker</h1>
-                    <p>Conoce más de #13 y el proceso creativo de Jodie para convivir con su doctor interior. Quién es su doctor clásico favorito, qué opina acerca de Christopher Eccleston y más</p>
+                    <p>Conoce más de #13 y el proceso creativo de Jodie para convivir con su doctor interior. Quién es su doctor clásico favorito, qué opina acerca de Christopher Eccleston y más...</p>
+                    <span>Seguir Leyendo >></span>
+                </div>
+            </article>
+            <article class="art-card art-card-reverse">
+                <figure class="art-card-figure">
+                    <img src="images/games.jpeg" alt="">
+                </figure>
+                <div class="art-card-content">
+                    <h1>Top de 5 mejores juegos de doctor who</h1>
+                    <p> Existen opciones para todas las plataformas, conoce los juegos mejor rankeados en la PlayStore y AppStore. 10 gamers nos dan su opinión...</p>
+                    <span>Seguir Leyendo >></span>
+                </div>
+            </article>
+            <article class="art-card">
+                <figure class="art-card-figure">
+                    <img src="images/tardis.jpg" alt="">
+                </figure>
+                <div class="art-card-content">
+                    <h1>Conoce la colección de tardis más grande del mundo</h1>
+                    <p>Phill Barrera llevaba un cargamento con mas de MIL KILOGRRAMOS DE MEETAANFEETAMINAS mmmjj mmm, perdonen ustedes MEEEL KEELOGRAMOS DE  mj mj ya se fue...</p>
                     <span>Seguir Leyendo >></span>
                 </div>
             </article>
@@ -205,5 +225,8 @@
         </section>
         <a class="btn" href="#">Ver más productos >></a>
     </section>
+    <footer class="ftr">
+        <p>© 2020 TORCHWOOD CORP.</p>
+    </footer>
 </body>
 </html>
