--- a/servicios.html
+++ b/servicios.html
@@ -35,7 +35,7 @@
                 </figure>
                 <div class="quizz-card-content">
                     <p>Descubre cuál de las asistentes del doctor eres según tus gustos.</p>
-                    <span>Jugar Ahora >></span>
+                    <span><a href="#">Jugar Ahora >></a></span>
                 </div>
             </div>
 
@@ -45,7 +45,7 @@
                 </figure>
                     <div class="quizz-card-content">
                     <p>¿Qué tanto sabes de los enemigos del doctor? Averígualo con este test.</p>
-                <span>Jugar Ahora >></span>
+                    <span><a href="#">Jugar Ahora >></a></span>
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
                 </figure>
                 <div class="quizz-card-content">
                     <p>Descubre cuál de los doctores va mejor con tu personalidad</p>
-                    <span>Jugar Ahora >></span>
+                    <span><a href="#">Jugar Ahora >></a></span>
                 </div>
             </div>
 
@@ -65,7 +65,7 @@
                 </figure>
                 <div class="quizz-card-content">
                     <p>Descubre cuál de las asistentes del doctor eres según tus gustos.</p>
-                    <span>Jugar Ahora >></span>
+                    <span><a href="#">Jugar Ahora >></a></span>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                 </figure>
                     <div class="quizz-card-content">
                     <p>¿Qué tanto sabes de los enemigos del doctor? Averígualo con este test.</p>
-                <span>Jugar Ahora >></span>
+                    <span><a href="#">Jugar Ahora >></a></span>
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                 </figure>
                 <div class="quizz-card-content">
                     <p>Descubre cuál de los doctores va mejor con tu personalidad</p>
-                    <span>Jugar Ahora >></span>
+                    <span><a href="#">Jugar Ahora >></a></span>
                 </div>
             </div>
         </section>
@@ -102,7 +102,7 @@
                 <div class="art-card-content">
                     <h1>Todo acerca de Jodie Whittaker</h1>
                     <p>Conoce más de #13 y el proceso creativo de Jodie para convivir con su doctor interior. Quién es su doctor clásico favorito, qué opina acerca de Christopher Eccleston y más...</p>
-                    <span>Seguir Leyendo >></span>
+                    <span><a href="#">Seguir Leyendo >></a></span>
                 </div>
             </article>
             <article class="art-card art-card-reverse">
@@ -112,7 +112,7 @@
                 <div class="art-card-content">
                     <h1>Top de 5 mejores juegos de doctor who</h1>
                     <p> Existen opciones para todas las plataformas, conoce los juegos mejor rankeados en la PlayStore y AppStore. 10 gamers nos dan su opinión...</p>
-                    <span>Seguir Leyendo >></span>
+                    <span><a href="#">Seguir Leyendo >></a></span>
                 </div>
             </article>
             <article class="art-card">
@@ -122,7 +122,7 @@
                 <div class="art-card-content">
                     <h1>Conoce la colección de tardis más grande del mundo</h1>
                     <p>Phill Barrera llevaba un cargamento con mas de MIL KILOGRRAMOS DE MEETAANFEETAMINAS mmmjj mmm, perdonen ustedes MEEEL KEELOGRAMOS DE  mj mj ya se fue...</p>
-                    <span>Seguir Leyendo >></span>
+                    <span><a href="#">Seguir Leyendo >></a></span>
                 </div>
             </article>
         </section>
@@ -139,7 +139,7 @@
                     <strong>Sonic screwdriver</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -150,7 +150,7 @@
                     <strong>Bow tie</strong>
                     <p>$800.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -161,7 +161,7 @@
                     <strong>Adipose plushie</strong>
                     <p>$8,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -172,7 +172,7 @@
                     <strong>Toys collection</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -183,7 +183,7 @@
                     <strong>Sonic screwdriver</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -194,7 +194,7 @@
                     <strong>Bow tie</strong>
                     <p>$800.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -205,7 +205,7 @@
                     <strong>Adipose plushie</strong>
                     <p>$8,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -216,7 +216,7 @@
                     <strong>Toys collection</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span>VER MÁS >></span>
+                    <span><a href="">VER MÁS >></a></span>
                 </div>
             </div>
         </section>
