--- a/servicios.html
+++ b/servicios.html
@@ -14,11 +14,11 @@
                 <img src="images\logos\cover.png" alt="logo-img">    
             </figure>
             <ul class="nav-options">
-                <li class="nav-option">TARDIS</li>
-                <li class="nav-option">SERVICIOS</li>
-                <li class="nav-option">NOSOTROS</li>
-                <li class="nav-option">CONTACTO</li>
-                <li class="nav-option">SUBSCRIBE</li>
+                <li class="nav-option">tardis</li>
+                <li class="nav-option">servicios</li>
+                <li class="nav-option">nosotros</li>
+                <li class="nav-option">contacto</li>
+                <li class="nav-option">subscribe</li>
             </ul>
         </nav>
         <section class="hero-banner">
@@ -27,7 +27,7 @@
         </section>
     </header>
     <section class="sect-quiz">
-        <h2>INTENTA UNO DE NUESTROS QUIZZES</h2>
+        <h2>Intenta uno de nuestros quizzes</h2>
         <section class="quizzes">
             <div class="quizz-card">
                 <figure class="quizz-card-figure">
@@ -93,7 +93,7 @@
     </section>
     
     <section class="sect-art">
-        <h2>ARTÍCULOS DEL UNIVERSO DE DOCTOR WHO</h2>
+        <h2>Artículos del universo de doctor who</h2>
         <section class="arts"> 
             <article class="art-card">
                 <figure class="art-card-figure">
@@ -129,7 +129,7 @@
         <a class="btn" href="#">Ver más artículos >></a>
     </section>
     <section class="shop">
-        <h2>ARTÍCULOS EN VENTA</h2>
+        <h2>Artículos en venta</h2>
         <section class="products">
             <div class="product-card">
                 <figure class="product-card-figure">
@@ -139,7 +139,7 @@
                     <strong>Sonic screwdriver</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">Ver más >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -150,7 +150,7 @@
                     <strong>Bow tie</strong>
                     <p>$800.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">ver más >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -161,7 +161,7 @@
                     <strong>Adipose plushie</strong>
                     <p>$8,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">ver más >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -172,7 +172,7 @@
                     <strong>Toys collection</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">ver más >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -183,7 +183,7 @@
                     <strong>Sonic screwdriver</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">ver más >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -194,7 +194,7 @@
                     <strong>Bow tie</strong>
                     <p>$800.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">ver más >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -205,7 +205,7 @@
                     <strong>Adipose plushie</strong>
                     <p>$8,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">ver más >></a></span>
                 </div>
             </div>
             <div class="product-card">
@@ -216,7 +216,7 @@
                     <strong>Toys collection</strong>
                     <p>$10,000.00</p>
                     <p>Modelo 1234566</p>
-                    <span><a href="">VER MÁS >></a></span>
+                    <span><a href="">ver más >></a></span>
                 </div>
             </div>
         </section>
