--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </figure>
         <ul class="nav-options">
             <li class="nav-option"><a href="#">tardis</a></li>
-            <li class="nav-option"><a href="#">servicios</a></li>
+            <li class="nav-option"><a href="servicios.html">servicios</a></li>
             <li class="nav-option"><a href="#aboutus">about us</a></li>
-            <li class="nav-option"><a href="#">contacto</a></li>
+            <li class="nav-option"><a href="contacto.html">contacto</a></li>
             <li class="nav-option"><a href="#">subscribe</a></li>
         </ul>
         <figure class="burger">
@@ -56,7 +56,7 @@
         <p class="quizz-title">descubre qué doctor eres con este quizz</p>
         <div class="quizz-opts">
             <a href="" class="gotoservice">contestar quizz</a>
-            <a href="" class="gotoservices">ver todos los quizzes</a>
+            <a href="servicios.html#quizz" class="gotoservices">ver todos los quizzes</a>
         </div>
         
     </section>
@@ -66,7 +66,7 @@
             <p class="art-title">todo acerca de jodie whittaker</p>
             <p class="article-desc">El camino a ser #13 y descubrir su doctor interior</p>
             <a href="" class="gotoservice">leer artículo</a>
-            <a href="" class="gotoservices">ver todos los artículos</a>
+            <a href="servicios.html#articles" class="gotoservices">ver todos los artículos</a>
         </div>
     </section>
     <section class="news">
@@ -128,7 +128,7 @@
             </figure>
             <div class="store-card">
                 Miles de artículos temáticos de Doctor Who te esperan en nuestra tienda en línea, entra para ver las promociones
-                <a href="" class="gotoservices">ver más >></a>
+                <a href="servicios.html#shop" class="gotoservices">ver más >></a>
             </div>
         </article>
     </section>
