--- a/servicios.html
+++ b/servicios.html
@@ -26,7 +26,7 @@
             
         </section>
     </header>
-    <section class="sect-quiz">
+    <section class="sect-quiz" id="quizz">
         <h2>Intenta uno de nuestros quizzes</h2>
         <section class="quizzes">
             <div class="quizz-card">
@@ -92,7 +92,7 @@
         <a class="btn" href="#">Ver más quizzes >></a>
     </section>
     
-    <section class="sect-art">
+    <section class="sect-art" id="articles">
         <h2>Artículos del universo de doctor who</h2>
         <section class="arts"> 
             <article class="art-card">
@@ -128,7 +128,7 @@
         </section>
         <a class="btn" href="#">Ver más artículos >></a>
     </section>
-    <section class="shop">
+    <section class="shop" id="shop">
         <h2>Artículos en venta</h2>
         <section class="products">
             <div class="product-card">
