--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
     <title>Front-End design</title>
 </head>
 <body>
-    <nav class="navbar">
-        <figure class="logo">
-            <img src="images\logos\cover.png" alt="logo-img">
-        </figure>
-        <ul class="nav-options">
-            <li class="nav-option"><a href="#">tardis</a></li>
-            <li class="nav-option"><a href="servicios.html">servicios</a></li>
-            <li class="nav-option"><a href="#aboutus">about us</a></li>
-            <li class="nav-option"><a href="contacto.html">contacto</a></li>
-            <li class="nav-option"><a href="#">subscribe</a></li>
-        </ul>
-        <figure class="burger">
-            <a href=""><img src="images\burger.png" alt="burger-menu"></a>
-        </figure>
-    </nav>
-    <section class="banner">
-        <figure class="ban-logo">
-            <img  alt="TORCHWOOD">
-        </figure>
-    </section>
+    <header>
+        <nav class="navbar">
+            <figure class="logo">
+                <img src="images\logos\cover.png" alt="logo-img">
+            </figure>
+            <ul class="nav-options">
+                <li class="nav-option"><a href="#">tardis</a></li>
+                <li class="nav-option"><a href="servicios.html">servicios</a></li>
+                <li class="nav-option"><a href="#aboutus">about us</a></li>
+                <li class="nav-option"><a href="contacto.html">contacto</a></li>
+                <li class="nav-option"><a href="#">subscribe</a></li>
+            </ul>
+            <figure class="burger">
+                <a href=""><img src="images\burger.png" alt="burger-menu"></a>
+            </figure>
+        </nav>
+        <section class="banner">
+            <figure class="ban-logo">
+                <img  alt="TORCHWOOD">
+            </figure>
+        </section>
+    </header>
     <section class="aboutus" id="aboutus">
         <p class="au-title">about us</p>
         <p class="au-content">Aventuras a través del tiempo y el espacio de la mano del personaje más entrañable de la última media década. Te encuentras en el sitio oficial de fanáticos de Doctor Who. Aquí encontrarás todas las novedades que envuelven el misterioso universo de The Doctor (y los universos paralelos también). Suscríbete para ser parte de la comunidad más grande desde Gallifrey hasta Raxacoricofallapatorius.</p>
