--- a/servicios.html
+++ b/servicios.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <header>
-        <nav class="nav-bar">
+        <nav class="navbar">
             <figure class="logo">
-                <img src="images\logos\cover.png" alt="logo-img">    
+                <img src="images\logos\cover.png" alt="logo-img">
             </figure>
             <ul class="nav-options">
-                <li class="nav-option">tardis</li>
-                <li class="nav-option">servicios</li>
-                <li class="nav-option">nosotros</li>
-                <li class="nav-option">contacto</li>
-                <li class="nav-option">subscribe</li>
+                <li class="nav-option"><a href="#">tardis</a></li>
+                <li class="nav-option"><a href="servicios.html">servicios</a></li>
+                <li class="nav-option"><a href="#aboutus">about us</a></li>
+                <li class="nav-option"><a href="contacto.html">contacto</a></li>
+                <li class="nav-option"><a href="#">subscribe</a></li>
             </ul>
+            <figure class="burger">
+                <a href=""><img src="images\burger.png" alt="burger-menu"></a>
+            </figure>
         </nav>
         <section class="hero-banner">
             <h1>SERVICIOS</h1>
-            
         </section>
     </header>
     <section class="sect-quiz" id="quizz">
