--- a/contacto.html
+++ b/contacto.html
@@ -27,9 +27,9 @@
     <section class="contact" id="contact">
         <h2 class="cont-title">contáctanos</h2>
         <form action="" class="cont-form">
-            <input type="text" class="cont-name" id="cont-name" value="*Nombre completo">
-            <input type="email" class="email" id="email" value="Correo">
-            <textarea class="message" name="message" id="message"></textarea>
+            <input type="text" class="cont-name" id="cont-name" placeholder="Nombre completo*">
+            <input type="email" class="email" id="email" placeholder="Correo*">
+            <textarea class="message" name="message" id="message" placeholder="Mensaje*"></textarea>
             <button type="submit" class="send" id="send">enviar</button>
         </form>
         <section class="soc-media">
