estilos de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -32,11 +32,12 @@
             <textarea class="message" name="message" id="message" placeholder="Mensaje*"></textarea>
             <button type="submit" class="send" id="send">enviar</button>
         </form>
+        <br>
+        <hr class="separator">
         <section class="soc-media">
-            <hr class="separator">
-            <figure class="soc-app"><img src="" alt="facebook"></figure>
-            <figure class="soc-app"><img src="" alt="twitter"></figure>
-            <figure class="soc-app"><img src="" alt="instagram"></figure>
+            <figure class="soc-app"><img src="images/facebook.png" alt="facebook"></figure>
+            <figure class="soc-app"><img src="images/twitter.png" alt="twitter"></figure>
+            <figure class="soc-app"><img src="images/instagram.png" alt="instagram"></figure>
         </section>
     </section>
     <footer class="footer">
