--- a/contacto.html
+++ b/contacto.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contacto.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Contacto</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <figure class="logo">
+                <a href="index.html">
                 <img src="images\logos\cover.png" alt="logo-img">
+                </a>
             </figure>
             <ul class="nav-options">
-                <li class="nav-option"><a href="#">tardis</a></li>
+                <li class="nav-option"><a href="index.html">Home</a></li>
                 <li class="nav-option"><a href="servicios.html">servicios</a></li>
-                <li class="nav-option"><a href="#aboutus">about us</a></li>
+                <li class="nav-option"><a href="index.html#aboutus">about us</a></li>
                 <li class="nav-option"><a href="contacto.html">contacto</a></li>
                 <li class="nav-option"><a href="#">subscribe</a></li>
             </ul>
