--- a/servicios.html
+++ b/servicios.html
@@ -11,12 +11,14 @@
     <header>
         <nav class="navbar">
             <figure class="logo">
+                <a href="index.html">
                 <img src="images\logos\cover.png" alt="logo-img">
+                </a>
             </figure>
             <ul class="nav-options">
-                <li class="nav-option"><a href="#">tardis</a></li>
+                <li class="nav-option"><a href="index.html">Home</a></li>
                 <li class="nav-option"><a href="servicios.html">servicios</a></li>
-                <li class="nav-option"><a href="#aboutus">about us</a></li>
+                <li class="nav-option"><a href="index.html#aboutus">about us</a></li>
                 <li class="nav-option"><a href="contacto.html">contacto</a></li>
                 <li class="nav-option"><a href="#">subscribe</a></li>
             </ul>
